Reworked the entire system that rendered and kept track of the minesweeper cells.

--- a/Minesweeper.vcxproj.filters
+++ b/Minesweeper.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Grid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -32,10 +35,13 @@
     <ClInclude Include="Grid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Font Include="cour.ttf">
+    <Image Include="textureatlas.png">
       <Filter>Resource Files</Filter>
-    </Font>
+    </Image>
   </ItemGroup>
 </Project>
