--- a/Minesweeper.vcxproj
+++ b/Minesweeper.vcxproj
@@ -137,14 +137,16 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="GUI.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Grid.h" />
+    <ClInclude Include="GUI.h" />
   </ItemGroup>
   <ItemGroup>
-    <Font Include="cour.ttf" />
+    <Image Include="textureatlas.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
