--- a/Minesweeper.vcxproj
+++ b/Minesweeper.vcxproj
@@ -136,12 +136,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Canvas.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Canvas.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="GUI.h" />
   </ItemGroup>
