Removed drawing feature and polished up the game.

--- a/Minesweeper.vcxproj
+++ b/Minesweeper.vcxproj
@@ -136,19 +136,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
-    <ClCompile Include="Canvas.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
-    <ClInclude Include="Canvas.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="GUI.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="textureatlas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="cour.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
